Patch FIX - Dynamic EDIT JVM - LINUX AUTO JVM