@@ -8,6 +8,7 @@
     <artifactId>DreamNetworkV2</artifactId>
     <version>1.6.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
     <profiles>
         <profile>
             <id>Prod</id>
@@ -15,6 +16,7 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
+                <java.version>11</java.version>
                 <outputPath>${project.basedir}/target/</outputPath>
             </properties>
         </profile>
@@ -42,9 +44,23 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                        --add-opens java.base/java.nio=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
+                        -Dillegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
                 <executions>
+
                     <execution>
                         <phase>package</phase>
                         <goals>
@@ -94,7 +110,7 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                 </configuration>
-            </plugin>
+            </plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target></configuration></plugin>
             <!-- Configures Proguard obfuscation tool to generate an
      obfuscated version of the JAR file that replaces the
      default unobfuscated JAR.
@@ -114,6 +130,8 @@
     </repositories>
 
     <dependencies><!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <!-- https://mvnrepository.com/artifact/com.googlecode.maven-download-plugin/maven-download-plugin -->
+
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
